PRD-847 fix (VLAN ID error message is not fit into the screen)

--- a/nailgun/static/css/main.css
+++ b/nailgun/static/css/main.css
@@ -1432,7 +1432,7 @@ h6.page-title {
 .networks-table .error .help-inline {
   display: block;
   padding-top: 2px;
-  width: 264px;
+  width: 239px;
   color: #B94A48;
 }
 
